<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sortby"
        android:title="Sort by...">

        <menu>
            <item
                android:id="@+id/meaning"
                android:title="English">
            </item>
            <item
                android:id="@+id/kana"
                android:title="Kana">
            </item>
        </menu>

    </item>
    <item
        android:id="@+id/action_alarm"
        android:title="@string/ActionAlarm"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/ActionImport"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/ActionExport"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/ActionHelp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/ActionAbout"
        app:showAsAction="never" />
</menu>