<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewWord">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/Kanji" />

            <TextView
                android:id="@+id/txt_word_val"
                android:layout_width="183dp"
                android:layout_height="23dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/Word_Contents"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_kana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Kana" />

            <EditText
                android:id="@+id/edit_kana"
                android:hint="@string/blank"
                android:layout_width="349dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txt_meaning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Meaning"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_meaning"
                android:hint="@string/blank"
                android:layout_width="349dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txt_example"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/Example" />

            <EditText
                android:id="@+id/edit_example"
                android:hint="@string/blank"
                android:layout_width="349dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="211dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/Update_Entry"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="12dp"
                    app:adSize="BANNER"
                    app:adUnitId="ca-app-pub-4081680103127041/8132181204"
                    app:layout_constraintBottom_toTopOf="@+id/btn_hideshow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.994" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/flbtn_rand"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom|end"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:foreground="@drawable/ic_dice_ico"
                    android:foregroundGravity="fill"
                    android:foregroundTint="@android:color/background_light"
                    app:backgroundTint="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <Button
                    android:id="@+id/btn_hideshow"
                    android:layout_width="211dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/HideShow"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="125dp"
        android:layout_height="44dp"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/Delete_Entry"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/holo_red_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>